fixed up navigation alignement

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8345,7 +8345,6 @@ a:hover {
   /* line 1, ../scss/_nav.scss */
   .nav_menu {
     margin-top: 0px;
-    margin-left: 195px;
     position: relative;
     line-height: 111px;
   }
