--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -4,7 +4,7 @@
 
 	@include respond ($tablet){
 		margin-top: 0px;
-		margin-left: 195px;
+		//margin-left: 195px;
 		position: relative;
 		line-height: $header_height;
 	}
